# Graded-Assessments

Graded-Ass/: .env.example  .gitignore  README.md  app.py  create_sample_template.py  requirements.txt
Graded-Ass/modules/: course_config.py  dataset_loader.py  judge.py  paper_generator.py  pipeline.py  question_selector.py  template_parser.py
Graded-Ass/optimize/: judge_optimizer.py
Graded-Ass/sample_data/: create_english_template.py  english_output_test.docx  english_questions.csv  english_template.docx  questions.csv  sample_exam_output.docx  template.docx
gradev1/: .gitignore  README.md  demo.py  main.py  pipeline.py  skills-lock.json
gradev1/.agents/skills/: generate.py
gradev1/assets/templates/: AMET.docx  ANU 2.docx  S-Vyasa.docx  reference-assessment-template.docx
gradev1/integrations/: gws_client.py  sheet_parsers.py
gradev1/libs/: pyproject.toml
gradev1/libs/src/graded_assessment/application/: generation_service.py  template_renderer.py
gradev1/libs/src/graded_assessment/application/renderers/: _base.py  amet_renderer.py  anu_renderer.py  cdu_renderer.py  svyasa_renderer.py
gradev1/libs/src/graded_assessment/domain/: amet_types.py  anu_types.py  cdu_types.py  svyasa_types.py  types.py
gradev1/libs/src/graded_assessment/infrastructure/: docx_exporter.py
gradev1/scripts/: create_assessment_reference_template.py  create_test_sheet.py
gradev1/skills/amet/: SKILL.md  generate.py
gradev1/skills/anu/: SKILL.md  generate.py
gradev1/skills/cdu/: SKILL.md  generate.py
gradev1/skills/graded-assessment/: SKILL.md
(+6 files in other folders)
